--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.5",
+    "@angular/cdk": "^16.2.3",
     "@angular/common": "^16.1.5",
     "@angular/compiler": "^16.1.5",
     "@angular/core": "^16.1.5",
     "@angular/forms": "^16.1.5",
-    "@angular/google-maps": "^16.2.2",
+    "@angular/material": "^16.2.3",
     "@angular/platform-browser": "^16.1.5",
     "@angular/platform-browser-dynamic": "^16.1.5",
     "@angular/router": "^16.1.5",
